--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.swc
-package-lock.json
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
+build
+.swc
 
-# production
-/build
+#storybook
+.storybook
+storybook-static
 
 # misc
 .DS_Store
@@ -25,13 +26,13 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+/test-results/
+/playwright-report/
+/playwright/.cache/
