--- a/package.json
+++ b/package.json
@@ -7,28 +7,62 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "analyze": "cross-env ANALYZE=true next build",
+    "postinstall": "npx patch-package -y",
+    "preinstall": "npx only-allow yarn",
+    "storybook": "cross-env FORCE_COLOR=1 storybook dev -p 6006",
+    "test-storybook": "cross-env FORCE_COLOR=1 test-storybook",
+    "build-storybook": "cross-env FORCE_COLOR=1 storybook build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
+    "@t3-oss/env-nextjs": "^0.6.1",
     "next": "13.4.19",
+    "next-compose-plugins": "^2.2.1",
+    "next-translate": "^2.5.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@jest/globals": "^29.6.4",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/nextjs": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "autoprefixer": "10.4.15",
+    "cross-env": "^7.0.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "patch-package": "^8.0.0",
     "postcss": "8.4.28",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "sass": "^1.66.1",
+    "storybook": "^7.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
