--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preinstall": "npx only-allow yarn",
     "storybook": "cross-env FORCE_COLOR=1 storybook dev -p 6006",
     "test-storybook": "cross-env FORCE_COLOR=1 test-storybook",
-    "build-storybook": "cross-env FORCE_COLOR=1 storybook build"
+    "build-storybook": "cross-env FORCE_COLOR=1 storybook build",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.4.19",
@@ -55,8 +57,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "husky": "^8.0.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "lint-staged": "^14.0.1",
     "patch-package": "^8.0.0",
     "postcss": "8.4.28",
     "prettier": "^3.0.3",
@@ -65,5 +69,6 @@
     "storybook": "^7.4.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
