--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@next/bundle-analyzer": "^13.4.19",
     "@t3-oss/env-nextjs": "^0.6.1",
+    "class-variance-authority": "^0.7.0",
     "next": "13.4.19",
     "next-compose-plugins": "^2.2.1",
     "next-translate": "^2.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -61,6 +63,7 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "lint-staged": "^14.0.1",
+    "next-translate-plugin": "^2.5.3",
     "patch-package": "^8.0.0",
     "postcss": "8.4.28",
     "prettier": "^3.0.3",
