--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.4.19",
+    "@reduxjs/toolkit": "^1.9.5",
     "@t3-oss/env-nextjs": "^0.6.1",
     "class-variance-authority": "^0.7.0",
     "next": "13.4.19",
     "next-compose-plugins": "^2.2.1",
+    "next-redux-wrapper": "^8.1.0",
     "next-translate": "^2.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
