Prepare the husky commit rules.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest",
     "analyze": "cross-env ANALYZE=true next build",
     "postinstall": "npx patch-package -y",
     "preinstall": "npx only-allow yarn",
