--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test-storybook": "cross-env FORCE_COLOR=1 test-storybook",
     "build-storybook": "cross-env FORCE_COLOR=1 storybook build",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.4.19",
