--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@t3-oss/env-nextjs": "^0.6.1",
     "class-variance-authority": "^0.7.0",
+    "cookies-next": "^4.0.0",
     "next": "13.4.19",
     "next-compose-plugins": "^2.2.1",
     "next-redux-wrapper": "^8.1.0",
